force-app/main/default/objects/Training__c/Training__c.object-meta.xml
<CustomObject>
    <label>Training</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Training No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>