force-app/main/default/objects/Training__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Candidate Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>