force-app/main/default/objects/Training__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate_Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>