force-app/main/default/objects/Training__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <label>Centre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>City__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore Loc1</fullName>
            </value>
            <value>
                <fullName>Bangalore Loc2</fullName>
            </value>
            <value>
                <fullName>Bangalore Loc3</fullName>
            </value>
            <value>
                <fullName>Chennai Loc1</fullName>
            </value>
            <value>
                <fullName>Hyderabad Loc1</fullName>
            </value>
            <value>
                <fullName>Hyderabad Loc2</fullName>
            </value>
            <value>
                <fullName>Hyderabad Loc3</fullName>
            </value>
            <value>
                <fullName>Kolkata Loc1</fullName>
            </value>
            <value>
                <fullName>Kolkata Loc2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>