force-app/main/default/objects/Training__c/fields/Class_Time__c.field-meta.xml
<CustomField>
    <fullName>Class_Time__c</fullName>
    <label>Class Time</label>
    <type>Time</type>
</CustomField>