force-app/main/default/objects/Training__c/fields/Education_Req__c.field-meta.xml
<CustomField>
    <fullName>Education_Req__c</fullName>
    <label>Education Req</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MTECH</fullName>
            </value>
            <value>
                <fullName>BTECH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>