force-app/main/default/objects/Training__c/fields/Is_Online__c.field-meta.xml
<CustomField>
    <fullName>Is_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Online?</label>
    <type>Checkbox</type>
</CustomField>