force-app/main/default/objects/Training__c/fields/Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Reg_No__c</fullName>
    <label>Reg No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>