force-app/main/default/objects/Training__c/fields/Syllabus__c.field-meta.xml
<CustomField>
    <fullName>Syllabus__c</fullName>
    <label>Syllabus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>