force-app/main/default/objects/Training__c/recordTypes/Non_Technical.recordType-meta.xml
<RecordType>
    <fullName>Non_Technical</fullName>
    <active>true</active>
    <description>For Non Tech Members</description>
    <label>Non Technical</label>
</RecordType>