force-app/main/default/objects/Training__c/recordTypes/Technical.recordType-meta.xml
<RecordType>
    <fullName>Technical</fullName>
    <active>true</active>
    <description>For Tech Members</description>
    <label>Technical</label>
</RecordType>