force-app/main/default/objects/Training__c/validationRules/Fee_Cant_change_for_completed_course.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Cant_change_for_completed_course</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Course_Status__c ) ,  
  ISPICKVAL(PRIORVALUE( Course_Status__c ), &quot;Completed&quot; ))</errorConditionFormula>
    <errorDisplayField>Course_Fee__c</errorDisplayField>
    <errorMessage>Fee Can&apos;t be changed for completed course</errorMessage>
</ValidationRule>