force-app/main/default/objects/Training__c/validationRules/Phone_must_for_Online.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_must_for_Online</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Is_Online__c , ISBLANK( Candidate_Phone__c ))</errorConditionFormula>
    <errorMessage>Phone Number is must if the class is Online</errorMessage>
</ValidationRule>