force-app/main/default/objects/Training__c/validationRules/Start_cannot_be_after_the_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_cannot_be_after_the_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>Course_Start_Date__c &gt;  Course_End_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be after End Date</errorMessage>
</ValidationRule>