force-app/main/default/objects/Training__c/validationRules/Status_Cannot_be_changed_once_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Cannot_be_changed_once_completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Course_Status__c ) , ISPICKVAL( Course_Status__c , &apos;Completed&apos;))</errorConditionFormula>
    <errorMessage>Status Cannot be changed once completed</errorMessage>
</ValidationRule>